--- a/Index.html
+++ b/Index.html
@@ -9,13 +9,14 @@
     <p>Please fill out this form with the required information</p>
     <form action='https://register-demo.freecodecamp.org'>
       <fieldset>
-        <label>Enter Your First Name: <input type="text" name="first-name" required /></label>
-        <label>Enter Your Last Name: <input type="text" name="last-name" required /></label>
+        <label>First Name: <input type="text" name="first-name" required /></label>
+        <label>Last Name: <input type="text" name="last-name" required /></label>
         <label>Enter Your Email: <input type="email" name="email" required /></label>
         <label>Create a New Password: <input type="password" name="password" pattern="[a-z0-5]{8,}" required /></label>
       </fieldset>
       <fieldset>
         <label><input type="radio" name="account-type" class="inline" /> Personal Account</label>
+        <label><input type="radio" name="account-type" class="inline" /> Work Account</label>
         <label><input type="radio" name="account-type" class="inline" /> Business Account</label>
         <label>
           <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
