--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       </fieldset>
       <fieldset>
         <label><input type="radio" name="account-type" class="inline" /> Personal Account</label>
-        <label><input type="radio" name="account-type" class="inline" /> MY Work Account</label>
+        <label><input type="radio" name="account-type" class="inline" /> Work Account by vishnu</label>
         <label><input type="radio" name="account-type" class="inline" /> Business Account</label>
         <label>
           <input type="checkbox" name="terms" class="inline" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
